--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=JPA-Workshop
 # ===============================
 
 # Optional Web Server setting (If you want to use another port then default :8080)
-# server.port = 9090
+ server.port = 9090
 
 # ===============================
 # = DATABASE
@@ -17,7 +17,7 @@ spring.application.name=JPA-Workshop
 spring.datasource.url = jdbc:mysql://localhost:3306/jpa_work?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
-spring.datasource.username = admin 
+spring.datasource.username = admin
 spring.datasource.password = pass1234
 
 # Keep the connection alive if idle for a long time (needed in production)
